timesheet-backend/src/logs/exceptions.log
[2025-07-15 15:21:48] error: uncaughtException: Invalid regular expression: missing /
C:\Users\kop_k\OneDrive\เดสก์ท็อป\GitHubLS\TimeSheetForStudent\timesheet-backend\src\routes\timesheetRoutes.js:16
    /
    ^

SyntaxError: Invalid regular expression: missing /
    at wrapSafe (node:internal/modules/cjs/loader:1662:18)
    at Module._compile (node:internal/modules/cjs/loader:1704:20)
    at Object..js (node:internal/modules/cjs/loader:1895:10)
    at Module.load (node:internal/modules/cjs/loader:1465:32)
    at Function._load (node:internal/modules/cjs/loader:1282:12)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:235:24)
    at Module.require (node:internal/modules/cjs/loader:1487:12)
    at require (node:internal/modules/helpers:135:16)
    at Object.<anonymous> (C:\Users\kop_k\OneDrive\เดสก์ท็อป\GitHubLS\TimeSheetForStudent\timesheet-backend\src\index.js:10:25)
